public static class Constants
{
    public static class INPUTS
    {
        public const string HORIZONTAL = "Horizontal";
    }

    public static class TAGS
    {
        public const string SCENE_LOADER = "SceneLoader";
        public const string PLAYER_HITBOX = "PlayerHitbox";
        public const string PLAYER_DETECTION = "PlayerDetection";
        public const string ENEMY = "Enemy";
        public const string GROUND = "Ground";
        public const string FLAG_END_LEVEL = "FlagEndLevel";
        public const string MAIN_VIRTUAL_CAMERA = "MainVirtualCamera";
    }

    public static class ANIMATIONS
    {
        public static class PLAYER
        {
            public const string RUNNING_BOOL = "running";
            public const string ATTACK_TRIGGER = "attack";
            public const string JUMP_TRIGGER = "jump";
        }

        public static class SLIME
        {
            public const string ATTACK_BOOL = "attacking";
        }

        public static class BAT
        {
            public const string ATTACK_BOOL = "atacar";
            public const string EXPLODE_TRIGGER = "explosion";
        }

        public static class WIZARD
        {
            public const string ATTACK_TRIGGER = "attack";
        }

        public static class FIREBALL
        {
            public const string EXPLODE_TRIGGER = "explode";
        }
    }

    public static class PLAYER_PREFS
    {
        
    }

 
}
